--- a/client/src/pages/DocSignupPage/style.css
+++ b/client/src/pages/DocSignupPage/style.css
@@ -64,16 +64,14 @@ form {
 
 .signup-button {
   grid-column: span 2;
-  width: 100%;
-  padding: 12px;
   background-color: #00796b;
   color: #ffffff;
-  border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
   margin-top: 20px;
+  width: fit-content;
 }
 
 .signup-button:hover {
