--- a/client/src/pages/DocResetPassword/docresetpassword.css
+++ b/client/src/pages/DocResetPassword/docresetpassword.css
@@ -13,7 +13,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-.btn {
+.reset-button .reset-click {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 16px;
@@ -22,7 +22,7 @@ h2 {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 100%;
+  width: fit-content;
   transition: background-color 0.3s ease;
 }
 
