--- a/client/src/pages/UserResetPassword/userresetpassword.css
+++ b/client/src/pages/UserResetPassword/userresetpassword.css
@@ -39,7 +39,7 @@ h2 {
   border-color: #007bff;
 }
 
-.btn {
+.reset-password .btn {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 16px;
@@ -49,7 +49,6 @@ h2 {
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: fit-content;
 }
 
 .btn:hover {
